<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">Background Image</string>
    <string name="swoosh_image">swoosh image</string>
    <string name="next">NEXT</string>
    <string name="desired_league">Desired League:</string>
    <string name="mens">Mens</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-ed</string>
    <string name="logo">logo</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="Find_a_team_text">Find a team in your city, and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="I_am_a">I am a:</string>
    <string name="finish">Finish</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="search_league">Looking for a co-ed beginner league near you…</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city, and dominate the league</string>
    <string name="Looking_for_a_">Looking for a </string>
    <string name="_league_near_you..."> league near you…</string>
    <string name="test_message">Looking for a %1$s %2$s league near you…"</string>
</resources>
